--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 
 html uzduotys/13 uzduotis atkurti spalvota lentele/13-uzdoutis-atkurti-spalvota-lentele/
+html uzduotys/13 uzduotis atkurti spalvota lentele/papildomi-uzdaviniai/
